--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Features</a>
+                <a class="nav-link text-white" href="#">Precos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Pricing</a>
+                <a class="nav-link text-white" href="#">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Quem Somos</a>
               </li>
             </ul>
           </div>
@@ -30,24 +33,76 @@
           </form>
         </div>
       </nav>
-
-    <section class="py-5" id = "Inicio" style="background-color: #be9e8b;">
+      <!--Incio-->
+    <section id = "Inicio" style="background-color: #be9e8b; padding-top: 15%; padding-bottom: 15%;">
       <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-4">
-                    <table>
+            <div class="row column-gap-5">
+                <div class="cols-md-12 col-lg-5">
+                    <table class="align-top mb-5">
                         <tr>
-                            <td><h1 class="Lead display-1">Pizza</h1></td>
+                            <td><h1 class="Lead display-1 text-justify">Pizzaria Dolce Gusto</h1></td>
                         </tr>
                         <tr>
-                            <td><p class="text-white"></p>
+                          <td><h2 class="Lead display-5 text-justify">O prazer vem redondo</h2></td>
+                        </tr>
+                        <tr>
+                            <td><p class="Lead fs-4 fw-light text-justify">Sueave, cremosa, saborosa, intensa</p>
+                        </tr>
+                        <tr>
+                            <td><a href="#" class="btn btn-outline-light btn-lg">Encomende Agora</a></td>
+                        </tr>
                     </table>
                 </div>
-            <div class="col-4"><img src="img/cover.jpg" alt="cover" width="500px" class="rounded-5"></div>
+            <div class="col-md-12 col-lg-5 m-auto"><img src="img/cover.jpg" alt="cover" width="500px" class="rounded-5"></div>
             </div>
       </div>
     </section>
 
+    <!--Cards-->
+    <section class="mt-5 bg-muted " style="padding-top: 15%; padding-bottom: 15%;">
+        <div class="row align-items-center justify-content-center m-auto">
+          <div class="col-lg-2 my-3">
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Pizza de Calabresa</h5>
+                <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
+                <a href="#" class="btn btn-primary">Encomendar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 my-3">
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Pizza de Calabresa</h5>
+                <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
+                <a href="#" class="btn btn-primary">Encomendar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 my-3">
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Pizza de Calabresa</h5>
+                <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
+                <a href="#" class="btn btn-primary">Encomendar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 my-3">
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Pizza de Calabresa</h5>
+                <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
+                <a href="#" class="btn btn-primary">Encomendar</a>
+              </div>
+            </div>
+          </div>
+        </div><!--Fim do Row-->
+
+    </section>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
