--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           </form>
         </div>
       </nav>
+
       <!--Incio-->
     <section id = "Inicio" style="background-color: #be9e8b; padding-top: 15%; padding-bottom: 15%;">
       <div class="container">
@@ -59,50 +60,72 @@
     </section>
 
     <!--Cards-->
-    <section class="mt-5 bg-muted " style="padding-top: 15%; padding-bottom: 15%;">
-        <div class="row align-items-center justify-content-center m-auto">
-          <div class="col-lg-2 my-3">
-            <div class="card text-center" style="width: 18rem;">
+    <section class="mt-5 bg-light" style="padding-top: 15%; padding-bottom: 15%;">
+
+      <div class="row align-items-center justify-content-center" style="width: 100%;">
+          <div class="col-md-10 col-lg-2 my-3">
+            <div class="card text-center border border-0">
               <div class="card-body">
-                <h5 class="card-title">Pizza de Calabresa</h5>
+                <h4 class="card-title">Napolitana</h4>
+                <h5 class="lead">Para os mais vegetarianos</h5>
+                <h1 class="my-4 text-primary">12.99€</h1>
                 <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
-                <a href="#" class="btn btn-primary">Encomendar</a>
+                <a href="#" class="btn btn-outline-primary my-3">Encomendar</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-2 my-3">
-            <div class="card text-center" style="width: 18rem;">
+          <div class="col-md-10 col-lg-2 my-4">
+            <div class="card text-center border border-0">
               <div class="card-body">
-                <h5 class="card-title">Pizza de Calabresa</h5>
+                <h4 class="card-title">Margherita</h4>
+                <h5 class="lead">Para os mais vegetarianos</h5>
+                <h1 class="my-4 text-primary">8.99€</h1>
                 <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
-                <a href="#" class="btn btn-primary">Encomendar</a>
+                <a href="#" class="btn btn-outline-primary my-3">Encomendar</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-2 my-3">
-            <div class="card text-center" style="width: 18rem;">
+          <div class="col-md-10 col-lg-2 my-4 ">
+            <div class="card text-center border border-primary">
+              <div class="card-header">
+                <h5 class="card-title text-primary">Promoção</h5>
+              </div>
               <div class="card-body">
-                <h5 class="card-title">Pizza de Calabresa</h5>
+                <h4 class="card-title">Carbonara</h4>
+                <h5 class="lead">Para os mais vegetarianos</h5>
+                <h1 class="my-4 text-primary">11.95€</h1>
                 <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
-                <a href="#" class="btn btn-primary">Encomendar</a>
+                <a href="#" class="btn btn-outline-primary my-3">Encomendar</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-2 my-3">
-            <div class="card text-center" style="width: 18rem;">
+          <div class="col-md-10 col-lg-2 my-4">
+            <div class="card text-center border border-0">
               <div class="card-body">
-                <h5 class="card-title">Pizza de Calabresa</h5>
+                <h4 class="card-title">4 Estações</h4>
+                <h5 class="lead">Para os mais vegetarianos</h5>
+                <h1 class="my-4 text-primary">14.29€</h1>
                 <p class="card-text">Calabresa, cebola, azeitona, mussarela e molho de tomate.</p>
-                <a href="#" class="btn btn-primary">Encomendar</a>
+                <a href="#" class="btn btn-outline-primary my-3">Encomendar</a>
               </div>
             </div>
           </div>
-        </div><!--Fim do Row-->
-
+      </div><!--Fim do Row-->
     </section>
+
+    <!--Mask-->
+  <section>
+
+  </section>
+
+<!--opiniones-->
+  <section>
+      <h1 class="text-center my-3">Opiniões</h1>
+  </section>
+  
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
