--- a/index.html
+++ b/index.html
@@ -8,6 +8,49 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <title>Pizza</title>
 </head>
+<style>
+  div.animation:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
+  }
+
+  .image-mask {
+            position: relative;
+            display: inline-block;
+        }
+
+  .container1 {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  .centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+        .image-mask::before {
+            content: '';
+            position: absolute;
+            top: 0.5%;
+            left: 0.5%;
+            width: 99%;
+            height: 99%;
+            background-color: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
+            border: 10px solid transparent; /* Margin around the mask */
+            box-sizing: border-box;
+        }
+
+        .image-mask img {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+        
+</style>
 <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #be9e8b;">
         <div class="container-fluid ms-5">
@@ -64,7 +107,8 @@
     <section class="mt-5 bg-light" style="padding-top: 15%; padding-bottom: 15%;">
 
       <div class="row align-items-center justify-content-center" style="width: 100%;">
-          <div class="col-md-10 col-lg-2 my-3">
+
+          <div class="col-md-10 col-lg-2 my-3 animation">
             <div class="card text-center border border-0 shadow">
               <div class="card-body">
                 <h4 class="card-title">Napolitana</h4>
@@ -76,7 +120,7 @@
             </div>
           </div>
 
-          <div class="col-md-10 col-lg-2 my-4">
+          <div class="col-md-10 col-lg-2 my-4 animation">
             <div class="card text-center border border-0 shadow">
               <div class="card-body">
                 <h4 class="card-title">Margherita</h4>
@@ -88,7 +132,7 @@
             </div>
           </div>
 
-          <div class="col-md-10 col-lg-2 my-4 ">
+          <div class="col-md-10 col-lg-2 my-4 animation">
             <div class="card text-center border border-primary shadow">
               <div class="card-header">
                 <h5 class="card-title text-primary">Promoção</h5>
@@ -103,7 +147,7 @@
             </div>
           </div>
 
-          <div class="col-md-10 col-lg-2 my-4">
+          <div class="col-md-10 col-lg-2 my-4 animation">
             <div class="card text-center border border-0 shadow">
               <div class="card-body">
                 <h4 class="card-title">4 Estações</h4>
@@ -119,12 +163,8 @@
 
     <!--Mask-->
   <section>
-    <div style="background-image: url(img/cover.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; padding: 30%;" class="align-items-center justify-content-center">
-        <div class="text-center " style="background-color: rgb(0, 0, 0, 0.5);">
-          <h1 class="text-white lead display-1">Dolce Gusto</h1>
-          <h4 class="text-white lead display-4">Pizzaria</h4>
-          <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#Modal_ub">A nossa Localizacao</button>
-        </div>
+    <div class="image-mask">
+      <img src="img/cover.jpg" alt="cover" class="img-fluid">
     </div>
   </section>
 
@@ -134,21 +174,21 @@
     <h1 class = "display-4 text-center">Opiniones</h1>
     <p class = "lead text-center">O que dizem os nossos clientes</p>
   </div>
-    <div class = "container" style="width: 50%;">
-      <div class = "card border border-0 px-5">
-        <div class = "card-body">  
-          <div class="col">
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star"></i>
-            <i class="bi bi-star"></i>
+      <div class = "container  col-md-12 col-lg-6">
+        <div class = "card border border-0 px-5">
+          <div class = "card-body">  
+            <div class="col">
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star"></i>
+              <i class="bi bi-star"></i>
+            </div>
+              <h5 class = "card-title">Opinioes sobre as nossas Pizzas</h5>
+              <p class = "card-text text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, voluptatem fuga laudantium deleniti nam minus excepturi incidunt. Est delectus laborum voluptatum debitis, nobis, reiciendis ab unde laudantium consequuntur sequi repudiandae.</p>
+              <p class="card-text">e.g. Mario Andretti</p>
           </div>
-            <h5 class = "card-title">Opinioes sobre as nossas Pizzas</h5>
-            <p class = "card-text text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, voluptatem fuga laudantium deleniti nam minus excepturi incidunt. Est delectus laborum voluptatum debitis, nobis, reiciendis ab unde laudantium consequuntur sequi repudiandae.</p>
-            <p class="card-text">e.g. Mario Andretti</p>
-         </div>
-      </div>
+        </div>
 
          
          <div class = "card border border-0 px-5">
@@ -183,16 +223,19 @@
       </div>
   </section>
 
+  <!--Footer-->
 
   <footer class="py-3 mt-5" style="background-color: #be9e8b;">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">inicio</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Precos</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Menu</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Quem Somos</a></li>
     </ul>
-      <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+    <div class="container">
+        <p class="text-center text-body-secondary">Pizzaria Dolce Gusto</p>
+        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+    </div>
   </footer>
 
 
@@ -224,7 +267,7 @@
     function myMap() {
     var mapProp= {
       center:new google.maps.LatLng(40.835671757262524, -8.482192125869211),
-      zoom:5,
+      zoom:15,
     };
     var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
     }
